--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
     <body>
+        <h1>HOLA GITHUB</h1>
         <header class="nav">
             <nav>    <h1 href="#">NAVEGADOR</h1>
             </nav>
