--- a/para aprender/Nueva carpeta/contactoenlace.html
+++ b/para aprender/Nueva carpeta/contactoenlace.html
@@ -3,4 +3,4 @@
 <a href="./text.html">
     <img src="../img"alt="">
 </a>
-<a href="./index.html">enlace a inicio</a>
+<a href="./index.html">enlace a inicio</a> <!-- Esto es un comentario en HTML -->
