--- a/contactoenlace.html
+++ b/contactoenlace.html
@@ -1,6 +1,6 @@
 <img src="img/arepa con huevo.jpg" alt="">
 <img src="img/arepa con huevo2.0.jpg" alt="">
 <a href="./text.html">
-    <img src="../img"alt="">
+    <img src="img/Colombiana.gaseosa.jpg"alt="">
 </a>
 <a href="./index.html">enlace a inicio</a>
