--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
     <body>
-        <h1>HOLA GITHUB</h1>
+        <h1>HOLA</h1>
         <header class="nav">
             <nav>    <h1 href="#">NAVEGADOR</h1>
             </nav>
@@ -29,6 +29,7 @@
                 <li>YUCA</li>
 
                 <a href="./contactoenlace.html">  enlace de arepa con huevo</a>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe blanditiis harum sequi laboriosam, modi voluptatibus ipsa possimus voluptate eum corporis dolorem, cumque dolorum odio consequuntur pariatur rem ex. Amet, eos?</p>
                 <p id="footer">esta es el footer que es la parte final de la clase</p>
         </section>
     </body>
